syntax = "proto3";

package auth;

option go_package = "pkg/protobuf/dto";

import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message NewUser {
    string full_name = 1;
    string email = 2;
    string password = 3;
}

message UserCreds {
    string email = 1;
    string password = 2;
}